RESOLVED FIXED263316
IntersectionObserver root rect with padding is incorrect if there's overflow clipping.
https://bugs.webkit.org/show_bug.cgi?id=263316
Summary IntersectionObserver root rect with padding is incorrect if there's overflow ...
Emilio Cobos Álvarez (:emilio)
Reported 2023-10-18 03:37:09 PDT
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-18 10:37:54 PDT
Johannes Odland
Comment 2 2025-12-10 13:39:56 PST
EWS
Comment 3 2025-12-11 08:06:17 PST
Committed 304296@main (30ee8b0124be): <https://commits.webkit.org/304296@main> Reviewed commits have been landed. Closing PR #55194 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.