IntersectionObserver root rect with padding is incorrect if there's overflow clipping. https://bugs.webkit.org/show_bug.cgi?id=263316

Reviewed by Simon Fraser.

Switch from using contentBoxRect to paddingBoxRect according to discussion in
https://github.com/w3c/IntersectionObserver/issues/504

* LayoutTests/imported/w3c/web-platform-tests/intersection-observer/padding-clip-expected.txt:
* Source/WebCore/page/IntersectionObserver.cpp:
(WebCore::IntersectionObserver::computeIntersectionState const):

Canonical link: https://commits.webkit.org/304296@main